fixed menu not showing

--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,8 @@ nav {
     background-position: center;
     background-attachment: fixed;
     min-height: 100vh;
-    /* width: 100vw; */
-    /* margin-left: calc(-50vw + 50%); */
+    width: 100vw;
+    margin-left: calc(-50vw + 50%);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -146,7 +146,6 @@ section {
     /* display: grid; */
     /* grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); */
     /* gap: 2rem; */
-
     margin: 0 20px;
 }
 
@@ -189,14 +188,6 @@ section {
     color: #666;
     flex-grow: 1;
 }
-
-.price {
-    font-size: 1.2rem;
-    font-weight: bold;
-    color: #FFB30E;
-    margin-top: auto;
-}
-
 
 .search-container {
     margin-top: 3rem;
@@ -243,6 +234,38 @@ section {
     font-size: 1.2rem;
     color: #888;
     padding: 2rem;
+}
+
+.slick-prev:before,
+.slick-next:before {
+    font-size: 30px;
+    color: #FFB30E;
+    opacity: 0.8;
+}
+
+.slick-prev {
+    left: -25px;
+}
+
+.slick-next {
+    right: -25px;
+}
+
+.slick-dots li button:before {
+    font-size: 12px;
+    color: #FFB30E;
+    opacity: 0.5;
+}
+
+.slick-dots li.slick-active button:before {
+    opacity: 1;
+}
+
+.price {
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: #FFB30E;
+    margin-top: auto;
 }
 
 .contact {
@@ -434,31 +457,6 @@ footer {
     background-color: #e6a20d;
 }
 
-.slick-prev:before,
-.slick-next:before {
-    font-size: 30px;
-    color: #FFB30E;
-    opacity: 0.8;
-}
-
-.slick-prev {
-    left: -25px;
-}
-
-.slick-next {
-    right: -25px;
-}
-
-.slick-dots li button:before {
-    font-size: 12px;
-    color: #FFB30E;
-    opacity: 0.5;
-}
-
-.slick-dots li.slick-active button:before {
-    opacity: 1;
-}
-
 @media (max-width: 768px) {
     .nav-links {
         display: none;
@@ -497,11 +495,11 @@ footer {
         height: 40px;
     }
 
-    .footer-logo img {
-        height: 35px;
-    }
-
     .menu {
         margin: 0;
+    }
+
+    .footer-logo img {
+        height: 35px;
     }
 }
